Copy extracted citations to the new repo (#832)
* Copy extracted citations to the new repo

* fix spell check

* ignore examples too

* tweak timeout

* add changes to github actions

* shrug

--- a/.github/workflows/build_package_py.yml
+++ b/.github/workflows/build_package_py.yml
@@ -6,8 +6,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "py/**"
   pull_request:
-
+    paths:
+      - "py/**"
 env:
   UV_VERSION: "0.7.20"
 
