--- a/.github/workflows/lint_ts.yml
+++ b/.github/workflows/lint_ts.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "ts/**"
   pull_request:
-    branches:
-      - main
+    paths:
+      - "ts/**"
 
 env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
