--- a/.github/workflows/test_py.yml
+++ b/.github/workflows/test_py.yml
@@ -4,7 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "py/**"
   pull_request:
+    paths:
+      - "py/**"
 
 env:
   UV_VERSION: "0.7.20"
