--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,13 +63,13 @@ repos:
     rev: v3.0.3
     hooks:
       - id: prettier
-        exclude: uv.lock
+        exclude: ^(uv.lock|ts/llama_cloud_services/pnpm-lock.yaml)
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
     hooks:
       - id: codespell
         additional_dependencies: [tomli]
-        exclude: ^(uv.lock|docs|ts)
+        exclude: ^(uv.lock|docs|ts|examples)
         args:
           [
             "--ignore-words-list",
