--- a/.github/workflows/test_ts.yml
+++ b/.github/workflows/test_ts.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "ts/**"
   pull_request:
-    branches:
-      - main
+    paths:
+      - "ts/**"
 
 env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
@@ -15,7 +17,8 @@ env:
   LLAMA_CLOUD_API_KEY: ${{ secrets.LLAMA_CLOUD_API_KEY }}
 
 jobs:
-  lint:
+  test:
+    name: Test - TypeScript
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -31,4 +34,4 @@ jobs:
         run: pnpm install --no-frozen-lockfile
       - name: Run tests
         working-directory: ts/llama_cloud_services/
-        run: pnpm test --run
+        run: pnpm test
