chore: build before releaes (#843)
* chore: add e2e tests and use monorepo for TS

* chore: build main package to run e2e tests

* chore: add build before releasing

* fix linting

---------

Co-authored-by: Logan Markewich <logan.markewich@live.com>

--- a/.github/workflows/release_ts.yml
+++ b/.github/workflows/release_ts.yml
@@ -22,8 +22,11 @@ jobs:
           node-version-file: "ts/llama_cloud_services/.nvmrc"
 
       - name: Install dependencies
-        working-directory: ts/llama_cloud_services
         run: pnpm install --no-frozen-lockfile
+
+      - name: Run Build
+        working-directory: ts/llama_cloud_services/
+        run: pnpm build
 
       - name: Build tarball
         run: |
