--- a/py/package.json
+++ b/py/package.json
@@ -1,7 +1,10 @@
 {
   "name": "llama-cloud-services-py",
   "version": "0.6.71",
-  "private": "true",
+  "private": false,
   "license": "MIT",
-  "scripts": {}
+  "scripts": {},
+  "devDependencies": {
+    "changesets": "^1.0.2"
+  }
 }
