--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "pre-commit-version": "pnpm changeset",
     "version": "./scripts/changeset-version.py version",
-    "publish": "./scripts/changeset-version.py publish --no-js --tag"
+    "publish": "./scripts/changeset-version.py publish --tag"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
