--- a/ts/llama_cloud_services/package.json
+++ b/ts/llama_cloud_services/package.json
@@ -24,7 +24,8 @@
     "./reader",
     "./parse",
     "./beta/agent",
-    "./extract"
+    "./extract",
+    "./classify"
   ],
   "exports": {
     "./openapi.json": "./openapi.json",
@@ -82,6 +83,17 @@
         "default": "./extract/dist/index.js"
       },
       "default": "./extract/dist/index.js"
+    },
+    "./classify": {
+      "require": {
+        "types": "./classify/dist/index.d.cts",
+        "default": "./classify/dist/index.cjs"
+      },
+      "import": {
+        "types": "./classify/dist/index.d.ts",
+        "default": "./classify/dist/index.js"
+      },
+      "default": "./classify/dist/index.js"
     },
     ".": {
       "require": {
