--- a/examples-ts/classify/package.json
+++ b/examples-ts/classify/package.json
@@ -12,7 +12,7 @@
     "@tanstack/react-router": "^1.133.22",
     "@tanstack/react-router-devtools": "^1.133.22",
     "@tanstack/react-start": "^1.133.22",
-    "llama-cloud-services": "workspace:*",
+    "llama-cloud-services": "file:../../ts/llama_cloud_services",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
